--- a/style.css
+++ b/style.css
@@ -51,13 +51,14 @@ E7E4E4
   --wht-clr: #F7F7F2;
 }
 
+/**Header Declarations*/
 #header {
   background-color: var(--blck-clr);
   min-width: 100vw;
   height: 12vh;
   display: flex;
   align-items: center;
-  padding-left: 1.8em;
+  padding-left: 3em;
   box-shadow: 0px 6px 6px -3px rgba(18,17,19,0.54);
 }
 
@@ -71,11 +72,33 @@ E7E4E4
 #header nav li {
   color: var(--wht-clr);
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 #header nav ul{ 
   display: flex;
   gap: 3rem;
+}
+
+/**Sort Container declarations*/
+#sorter-container {
+  padding: 1.7rem 0 0 3rem;
+}
+
+/**Add book btn declarations*/
+#add-book-btn button {
+  border: none;
+  cursor: pointer;
+  background-color: var(--wht-clr);
+  font-size: 1.5em;
+  font-weight: 700;
+}
+
+#add-book-btn {
+  padding: 1.2rem 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
